<resources>

    <string name="app_name">MoneyOrganizer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Money Organizer</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="ingresos">Ingresos:</string>
    <string name="montoIngresos">0000.00</string>
    <string name="gastos">Gastos:</string>
    <string name="montoGastos">0000.00</string>
    <string name="disponible">Disponible:</string>
    <string name="montoDisponible">0000.00</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Enero</string>
    <string name="title_activity_swipoe_views">Money Organizer</string>
    <string name="title_activity_total_de_gastos">TotalDeGastos</string>
    <string name="title_activity_total_de_ingresos">TotalDeIngresos</string>
    <string name="menos">-</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_categoria_gasto">Seleccione una Categoría de gasto</string>
    <string name="title_activity_categoria_ingreso">Seleccione una categoría de ingreso</string>
    <string name="title_activity_detalles_ingreso">Ingrese los detalles del Ingreso</string>
    <string name="title_activity_detalles_gasto">Ingrese los detalles del Gasto</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="setiembre">Setiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="title_activity_barra_inferior">BarraInferior</string>
    <string name="colones">Colones</string>
    <string name="dolares">Dolares</string>
    <string name="moneyOrganizer">Money Organizer</string>
</resources>