<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ingresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/ingresos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#005C1F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/montoIngresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/montoIngresos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#005C1F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingresos"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/gastos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#B20000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/montoGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ingresos"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/montoGastos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#B20000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/disponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gastos"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/disponible"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000B8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/montoDisponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/gastos"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/montoDisponible"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000B8"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timeline_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:weightSum="100" >

        <Button
            android:id="@+id/DetalIngresos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="loadData"
            android:text="Detalle de Ingresos" />

        <Button
            android:id="@+id/DetalGastos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="clearData"
            android:text="Detalle de Gastos" />
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/barrainferior" />

</LinearLayout>